bootstrap align fixed; styles to result & leaderboard components added

--- a/dots/frontend/static/css/default.css
+++ b/dots/frontend/static/css/default.css
@@ -10,7 +10,16 @@
 	margin-top: 30px;
 }
 
+.space-bottom{
+	margin-bottom: 30px;
+}
+
 .block-margin {
 	display: block;
+	margin: 10px auto;
+}
+
+.width-90 {
+	width: 90%;
 	margin: 0px auto;
 }
